# orchids-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-cleanup.ps1  docker-run.ps1  start.sh
backend/: api_cache.bak  api_cache.dir  pyproject.toml  requirements.txt
backend/app/: __init__.py  generator.py  main.py  response.md  scrape.py  test_generator.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
