[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "hyperbrowser>=0.45.1",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "selenium>=4.33.0",
]
